# TrackingTelescope

./: .gitignore  CMakeLists.txt  GKCalibrationList_Telescope7.txt  Makefile  Makefile_ubuntu  README.md  TrackingTelescope  TrackingTelescope.sh  add_new_telescope
ALIGNMENT/: 7Planes.raw  DICTIONARY.txt  telescope10.old  telescope4PlNew.blanc  telescope4Plane.blanc  telescope6Plane.blanc  telescope7Plane.blanc
Calibrations/: #phCalibration_C0.dat#
Calibrations/telescope34/: Errors022.txt
Calibrations/telescope9/: .phCalibrationGErfFit_C0.dat.swp
calibration_lists/: GKCalibrationList_Telescope10.txt  GKCalibrationList_Telescope12.txt  GKCalibrationList_Telescope13.txt  GKCalibrationList_Telescope15.txt  GKCalibrationList_Telescope21.txt  GKCalibrationList_Telescope22.txt  GKCalibrationList_Telescope25.txt  GKCalibrationList_Telescope29.txt  GKCalibrationList_Telescope30.txt  GKCalibrationList_Telescope34.txt  GKCalibrationList_Telescope35.txt  GKCalibrationList_Telescope51.txt  GKCalibrationList_Telescope69.txt  GKCalibrationList_Telescope7.txt  GKCalibrationList_Telescope70.txt  GKCalibrationList_Telescope9.txt
cmake/: FindROOT.cmake
config/: align.txt  telescopes.txt  z_pos.txt
data/: align_dict.txt  alignments.txt  vcal_calibrations.txt
data/calibrations/telescope10/: ROC6.txt
data/calibrations/telescope13/: ROC2.txt  ROC3.txt  ROC5.txt
data/calibrations/telescope21/: ROC5.txt
data/calibrations/telescope25/: ROC0.txt
data/calibrations/telescope29/: ROC6.txt  cal3.txt
data/calibrations/telescope34/: ROC4.txt
data/calibrations/telescope35/: ROC3.txt  cal3.txt
data/calibrations/telescope46/: ROC4.txt  cal4.txt
data/calibrations/telescope51/: ROC4.txt  ROC5.txt  ROC6.txt  cal0.txt  cal1.txt  cal2.txt  cal4.txt  cal5.txt  cal6.txt
data/calibrations/telescope55/: cal3.txt  cal4.txt  cal5.txt  cal6.txt
include/: Action.h  DoAlignment.h  FileWriterTracking.h  FindPlaneErrors.h  GetNames.h  PLTAlignment.h  PLTAnalysis.h  PLTCluster.h  PLTGainCal.h  PLTHit.h  PLTTelescope.h  PLTTracking.h  PLTU.h  PSIBinaryFileReader.h  PSIFileReader.h  PSIGainInterpolator.h  PSIRootFileReader.h  RootItems.h  TestPlaneEfficiencySilicon.h  Utils.h
interface/: DoAlignment.h  DoAlignment2.h  FileWriterTracking.h  FindPlaneErrors.h  GetNames.h  PLTAlignment.h  PLTAnalysis.h  PLTBinaryFileReader.h  PLTGainCal.h  PLTHit.h  PLTPlane.h  PLTTelescope.h  PLTTrack.h  PLTTracking.h  PLTU.h  PSIBinaryFileReader.h  PSIFileReader.h  PSIRootFileReader.h  RootItems.h  TestBinaryFileReader.h  Utils.h
outer_pixel_masks/: outerPixelMask_Telescope10.txt  outerPixelMask_Telescope21.txt  outerPixelMask_Telescope22.txt  outerPixelMask_Telescope69.txt
python/: .gitignore  Analyze.py  Calibrator.py  ClusterSizeAndCharge.py  Efficiency.py  GenerateRootFile.py  RunInfos.py  add_new_telescope.py  calibrator.py  cp_plots.sh  prepare_plots.sh  root_style.py  write_align.py
src/: Action.cc  CMakeLists.txt  DoAlignment.cc  DoAlignment2.cc  FileWriterTracking.cc  FindPlaneErrors.cc  GetNames.cc  PLTAlignment.cc  PLTAnalysis.cc  PLTBinaryFileReader.cc  PLTCluster.cc  PLTGainCal.cc  PLTHit.cc  PLTPlane.cc  PLTTelescope.cc  PLTTesterReader.cc  PLTTrack.cc  PLTTracking.cc  PLTU.cc  PSIBinaryFileReader.cc  PSIFileReader.cc  PSIGainInterpolator.cc  PSIRootFileReader.cc  RootItems.cc  TestBinaryFileReader.cc  TestPlaneEfficiencySilicon.cc  TrackingTelescope.cxx  Utils.cc
