# source files
FILE(GLOB LIB_SOURCES "*.cc")
SET(LIB_SOURCE_FILES ${LIB_SOURCES})

# header files
SET(LIB_HEADER_FILES ${PROJECT_SOURCE_DIR}/include/PSIRootFileReader.h)

# root dictionary
set(EVAL_DICT ${CMAKE_CURRENT_BINARY_DIR}/evalDict.cxx)
SET(MY_INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR}/include ${ROOT_INCLUDE_DIR} )
ROOT_GENERATE_DICTIONARY_OLD("${LIB_HEADER_FILES}" "${MY_INCLUDE_DIRECTORIES}" "${EVAL_DICT}")
#root_generate_dictionary(${EVAL_DICT} LIB_HEADER_FILES LINKDEF inc/LinkDef.h)

# libraries
ADD_LIBRARY(${PROJECT_NAME} SHARED ${LIB_SOURCE_FILES} ${EVAL_DICT})

# executable
SET(Eval_SOURCES TrackingTelescope.cxx)
SET(EVAL_EXECUTABLE TrackingTelescope.exe)
ADD_EXECUTABLE(${EVAL_EXECUTABLE} ${Eval_SOURCES})

# Link necessary libraries:
TARGET_LINK_LIBRARIES(${EVAL_EXECUTABLE} ${PROJECT_NAME} ${ROOT_LIBRARIES})

INSTALL(TARGETS ${PROJECT_NAME}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)